--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+:root {
+  --color-1: #f4eeff;
+  --color-2: #dcd6f7;
+  --color-3: #a6b1e1;
+  --color-4: #424874;
+}
+
 body {
-  background-color: beige;
+  background-color: var(--color-1);
 }
