--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,20 @@ main {
   max-height: 200px;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (max-width: 640px) {
   body {
-    margin-left: 100px;
-    margin-right: 100px;
+    margin: 5px 10px;
+  }
+}
+
+@media screen and (min-width: 641px) and (max-width: 1007px) {
+  body {
+    margin: 5px 75px;
+  }
+}
+
+@media screen and (min-width: 1008px) {
+  body {
+    margin: 5px 150px;
   }
 }
