--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ footer {
   text-align: right;
 }
 
+h3 {
+  margin: 2px 5px;
+}
+
 header {
   border-bottom: 2px solid var(--color-4);
   text-align: center;
@@ -22,6 +26,14 @@ header {
 main,
 section {
   border-bottom: 2px solid var(--color-4);
+}
+
+.card {
+  border: 2px solid var(--color-4);
+  border-radius: 5px;
+  box-shadow: 5px 5px var(--color-3);
+  margin: 10px;
+  padding: 10px;
 }
 
 .hero {
