--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ footer {
   text-align: right;
 }
 
+h2 {
+  margin: 2px 5px;
+}
+
 h3 {
   margin: 2px 5px;
 }
@@ -39,6 +43,12 @@ section {
 .hero {
   border-radius: 50%;
   max-height: 200px;
+}
+
+.projectContainer {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 @media screen and (max-width: 640px) {
