--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,18 @@ section {
   flex-grow: 1;
 }
 
+.projectContainer .card {
+  cursor: pointer;
+}
+
+.projectContainer p {
+  display: none;
+}
+
+.projectContainer div.active p {
+  display: flex;
+}
+
 @media screen and (max-width: 640px) {
   body {
     margin: 5px 10px;
