--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,32 @@ section {
   max-height: 200px;
 }
 
+.mainNav a,
+.mainNav a:active,
+.mainNav a:hover,
+.mainNav a:link,
+.mainNav a:visited {
+  text-decoration: none;
+}
+
+.mainNav li {
+  background-color: var(--color-2);
+  border: 2px solid var(--color-4);
+  border-radius: 5px;
+  box-shadow: 2px 2px var(--color-3);
+  margin: 5px 2px 2px 2px;
+  padding: 2px 5px;
+}
+
+.mainNav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 @media screen and (max-width: 640px) {
   body {
     margin: 5px 10px;
