--- a/css/projects.css
+++ b/css/projects.css
@@ -1,17 +1,7 @@
-.projectContainer {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-
-.projectContainer .card {
-  cursor: pointer;
-}
-
-.projectContainer p {
-  display: none;
-}
-
-.projectContainer div.active p {
-  display: flex;
+.card {
+  border: 2px solid var(--color-4);
+  border-radius: 5px;
+  box-shadow: 5px 5px var(--color-3);
+  margin: 10px;
+  padding: 10px;
 }
