--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ main {
     max-width: 800px;
 }
 
-section {
+nav, section {
     background-color: rgba(255, 255, 255, 0.85);
     border: 2px solid black;
     border-radius: 10px;
