--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,18 @@ nav, section {
     width: 100%;
     padding: 20px;
 }
+
+nav a, nav a:active, nav a:visited, nav a:link, nav a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+nav ul {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+}
