--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,16 @@ nav ul {
     padding: 0;
 }
 
+nav ul li {
+    border: 0;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+nav ul li:hover {
+    background-color: rgba(255, 255, 255, 1.0);
+}
+
 p {
     line-height: 1.5;
 }
