--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,10 @@ nav ul {
 }
 
 nav ul li {
-    border: 0;
+    background-color: rgba(255, 255, 255, 0.85);
+    border: 2px solid black;
     border-radius: 10px;
+    box-shadow: 2px 2px rgba(100, 100, 100, 0.5);
     padding: 5px;
 }
 
