--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,24 @@ header {
     background-color: rgba(255, 255, 255, 0.85);
     border: 2px solid black;
     border-radius: 10px;
-    min-width: 400px;
+    display: flex;
+    flex-direction: row;
+    min-width: 500px;
     padding: 20px;
+}
+
+header div {
+    align-items: center;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+}
+
+header div img {
+    border-radius: 50%;
+    max-width: 100px;
 }
 
 main {
