--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     background-size: cover;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     margin: 0;
     min-height: 100vh;
     padding: 10px;
