--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     align-items: center;
     background-attachment: fixed;
@@ -18,13 +22,12 @@ header {
     border-radius: 10px;
     display: flex;
     flex-direction: row;
-    min-width: 500px;
+    min-width: 800px;
     padding: 20px;
 }
 
 header div {
     align-items: center;
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -37,7 +40,7 @@ header div img {
 }
 
 main {
-    max-width: 800px;
+    width: 800px;
 }
 
 nav, section {
