--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,27 @@ body {
   max-width: 200px;
   border: 2px solid var(--color-text);
   border-radius: 50%;
+  box-shadow: 5px 5px 5px var(--color-primary);
 }
 
 .navbar * {
   background-color: var(--color-text);
   color: var(--color-bg);
+}
+
+.navbar-brand:hover {
+  color: var(--color-primary);
+}
+
+.nav-link:hover {
+  color: var(--color-primary);
+}
+
+/* ID STYLES */
+
+#burger-icon {
+  background-color: var(--color-bg);
+  border: 1px solid var(--color-muted);
+  border-radius: 5px;
+  color: var(--color-text);
 }
