--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,8 @@ footer {
     width: 100%;
 }
 
-h1 {
+h1,
+h2 {
     margin-top: 20px;
     text-align: center;
 }
@@ -53,23 +54,6 @@ nav {
     width: 100%;
 }
 
-section {
-    display: flex;
-    flex-direction: row;
-}
-
-section > div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    justify-content: center;
-}
-
-section > div > p {
-    margin: 10px;
-}
-
 /* CLASS STYLES */
 
 .container {
@@ -78,10 +62,56 @@ section > div > p {
     min-height: 100vh;
 }
 
+.hero {
+    display: flex;
+    flex-direction: row;
+}
+
+.hero > div {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    justify-content: center;
+}
+
+.hero > div > p {
+    margin: 10px;
+}
+
 .hero-img {
     border: 2px solid black;
     border-radius: 50%;
     max-width: 200px;
+}
+
+.portfolio {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+
+.portfolio .card {
+    align-items: center;
+    box-shadow: 5px 5px var(--color-muted);
+    box-sizing: border-box;
+    border: 2px solid var(--color-primary);
+    border-radius: 10px;
+    display: flex;
+    flex-grow: 1;
+    margin: 10px;
+    padding: 10px;
+    width: 50%;
+}
+
+.portfolio .card div {
+    margin-bottom: 10px;
+}
+
+.portfolio .row {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
 }
 
 /* ID STYLES */
