--- a/css/style.css
+++ b/css/style.css
@@ -11,113 +11,9 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-/* BASE STYLES */
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    background-color: white;
-    scroll-behavior: smooth;
-}
-
-body {
-    background-color: var(--color-bg);
-    color: var(--color-text);
-    font-family: "Montserrat", sans-serif;
-    margin: 0 auto;
-    min-height: 100vh;
-}
-
-footer {
-    background-color: var(--color-primary);
-    color: var(--color-bg);
-    padding: 2px;
-    text-align: right;
-    width: 100%;
-}
-
-h1,
-h2 {
-    margin-top: 20px;
-    text-align: center;
-}
-
-main {
-    flex-grow: 1;
-    padding: 2px;
-    width: 100%;
-}
-
-nav {
-    background-color: var(--color-primary);
-    color: var(--color-bg);
-    padding: 2px;
-    width: 100%;
-}
+/* ELEMENT STYLES */
 
 /* CLASS STYLES */
-
-.container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-.hero {
-    display: flex;
-    flex-direction: row;
-}
-
-.hero > div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    justify-content: center;
-}
-
-.hero > div > p {
-    margin: 10px;
-}
-
-.hero-img {
-    border: 2px solid black;
-    border-radius: 50%;
-    max-width: 200px;
-}
-
-.portfolio {
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
-}
-
-.portfolio .card {
-    align-items: center;
-    box-shadow: 5px 5px var(--color-muted);
-    box-sizing: border-box;
-    border: 2px solid var(--color-primary);
-    border-radius: 10px;
-    display: flex;
-    flex-grow: 1;
-    margin: 10px;
-    padding: 10px;
-    width: 50%;
-}
-
-.portfolio .card div {
-    margin-bottom: 10px;
-}
-
-.portfolio .row {
-    display: flex;
-    flex-direction: row;
-    flex-grow: 1;
-}
 
 /* ID STYLES */
 
