--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,94 @@
     --color-muted: #dbe2ef;
 }
 
-/* FONT IMPORTS */
-
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
 /* ELEMENT STYLES */
 
+body {
+    background-color: var(--color-bg);
+    border: 0;
+    color: var(--color-text);
+    display: flex;
+    min-height: 100vh;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
+footer {
+    text-align: right;
+}
+
+footer p {
+    margin: 0;
+}
+
+h1 {
+    font-family: "Condiment";
+    font-size: 4rem;
+    margin: 10px;
+    text-align: center;
+}
+
+header {
+    align-items: center;
+    border-bottom: 2px solid var(--color-text);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+html {
+    background-color: white;
+}
+
+main {
+    border-bottom: 2px solid var(--color-text);
+    flex-grow: 1;
+    margin: 5px 0;
+}
+
+nav {
+    border-bottom: 2px solid var(--color-text);
+    padding: 5px;
+}
+
+nav ul {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 /* CLASS STYLES */
+
+.container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    font-family: Montserrat, sans-serif;
+}
+
+.header-img {
+    border: 2px solid var(--color-text);
+    border-radius: 50%;
+    max-width: 150px;
+}
+
+.portfolioCard {
+    border: 2px solid var(--color-text);
+    border-radius: 5px;
+    box-shadow: 5px 5px var(--color-primary);
+    margin: 10px;
+    padding: 10px;
+}
+
+.portfolioCardHead,
+.portfolioCardBody {
+    margin-bottom: 10px;
+}
 
 /* ID STYLES */
 
