--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ nav ul {
     border: 2px solid var(--color-text);
     border-radius: 5px;
     box-shadow: 5px 5px var(--color-primary);
-    margin: 10px;
+    margin: 10px 10px 20px 10px;
     padding: 10px;
 }
 
