--- a/css/quiz.css
+++ b/css/quiz.css
@@ -3,6 +3,10 @@
     padding: 5px;
 }
 
+.quizButton {
+    margin: 20px 0;
+}
+
 .quizFrame {
     border: 2px solid black;
     border-radius: 10px;
@@ -17,6 +21,6 @@
 }
 
 .quizSource {
+    font-size: 0.9em;
     font-style: italic;
-    margin-bottom: 20px;
 }
